--- a/packages/preboot/package.json
+++ b/packages/preboot/package.json
@@ -25,5 +25,6 @@
   },
   "bugs": {
     "url": "https://github.com/OwlAford/hive/issues"
-  }
+  },
+  "gitHead": "069960ad8e70d8129e135d35de7df3eafe94273e"
 }
